# provetrail

./: .gitignore  CITATION.cff  CONFORMANCE.md  CONTRIBUTING.md  LICENSE  LICENSE-docs  NOTICE  README.md  SPEC.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: conformance-vector-proposal.md  specification-feedback.md
.github/workflows/: release-crate.yml  release-npm.yml  release-pypi.yml
clients/: README.md  RELEASING.md
clients/npm/: README.md  cli.js  index.js  package-lock.json  package.json
clients/npm/test/: conformance.test.js
clients/python/: README.md  pyproject.toml
clients/python/src/provetrail/: __init__.py  __main__.py  verify.py
clients/python/tests/: test_conformance.py
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs  main.rs
clients/rust/tests/: conformance.rs
docs/: proof-requires-a-runtime.md
predicates/: run-provenance.md
vectors/: README.md
vectors/crypto/: manifest.json
vectors/crypto/invalid/: crypto_checkpoint_bad_content_type_01.cbor  crypto_checkpoint_bad_signature_01.cbor  crypto_checkpoint_undecodable_payload_01.cbor  crypto_checkpoint_unknown_key_01.cbor  crypto_consistency_forged_path_01.cbor  crypto_consistency_unknown_key_01.cbor  crypto_event_proof_bad_inclusion_01.cbor  crypto_event_proof_bad_signature_01.cbor  crypto_event_proof_size_mismatch_01.cbor  crypto_governance_denied_but_executed_01.cbor  crypto_governance_unadmitted_action_01.cbor  crypto_ground_truth_failed_check_01.cbor  crypto_ground_truth_unbound_success_01.cbor  crypto_run_bad_signature_01.cbor  crypto_run_non_canonical_01.cbor  crypto_run_root_mismatch_01.cbor  crypto_run_size_mismatch_01.cbor
vectors/crypto/valid/: crypto_checkpoint_valid_01.cbor  crypto_consistency_valid_01.cbor  crypto_event_proof_valid_01.cbor  crypto_governance_valid_01.cbor  crypto_ground_truth_valid_01.cbor  crypto_run_valid_01.cbor
vectors/structural/: manifest.json
vectors/structural/invalid/: invalid_chain_non_monotonic_seq_01_0.cbor  invalid_chain_stream_mismatch_01_1.cbor  invalid_enc_duplicate_map_key_01.cbor  invalid_enc_indefinite_length_01.cbor  invalid_enc_invalid_utf8_01.cbor  invalid_enc_non_canonical_cbor_01.cbor  invalid_enc_trailing_bytes_01.cbor
vectors/structural/valid/: valid_chain_01_0.cbor  valid_chain_01_2.cbor  valid_optional_fields_01.cbor
