[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "provetrail"
version = "0.1.0"
description = "Verifier for the Provetrail standard (verifiable execution provenance): checks a sealed run record's signature and Merkle integrity."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Ion Alpha", email = "contact@ionalpha.io" }]
keywords = [
    "provetrail",
    "verifiable-execution",
    "provenance",
    "agents",
    "audit",
    "transparency-log",
    "attestation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "cbor2>=5.4",
    "cryptography>=41",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
provetrail = "provetrail.__main__:main"

[project.urls]
Homepage = "https://provetrail.org"
Repository = "https://github.com/ionalpha/provetrail"
Issues = "https://github.com/ionalpha/provetrail/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/provetrail"]
