[package]
name = "provetrail"
version = "0.0.1"
edition = "2021"
description = "Verifier for the Provetrail standard (verifiable execution provenance)."
license = "Apache-2.0"
repository = "https://github.com/ionalpha/provetrail"
homepage = "https://provetrail.org"
keywords = ["provetrail", "verifiable-execution", "provenance", "attestation"]
categories = ["cryptography"]

[dependencies]
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
coset = "0.3"
ed25519-dalek = "2"
sha2 = "0.10"
hex = "0.4"
